--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aiproxy-frontend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Frontend client for AIProxy - Tampermonkey userscript",
   "scripts": {
     "test": "jest",
